--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-box grabbable position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder
+        grabbable
         position="1 0.75 -3"
         radius="0.5"
         height="1.5"
         color="#FFC65D"
       ></a-cylinder>
       <a-plane
+        grabbable
         position="0 0 -4"
         rotation="-90 0 0"
         width="4"
@@ -20,6 +22,9 @@
         color="#7BC8A4"
       ></a-plane>
       <a-sky color="#ECECEC"></a-sky>
+
+      <a-entity id="leftHand" hand-tracking-grab-controls="hand: left;"></a-entity>
+      <a-entity id="rightHand" hand-tracking-grab-controls="hand: right;"></a-entity>
     </a-scene>
   </body>
 </html>
