--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.2.0/dist/aframe-extras.min.js"></script>
+    <script
+        src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
+    <script
+        src="https://unpkg.com/aframe-text-geometry-component@0.5.1/dist/aframe-text-geometry-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-babia-components@1.2.7/dist/aframe-babia-components.min.js"></script>
+    <link rel="stylesheet" href="../museum/assets/gitlab-corner.css">
+
   </head>
   <body>
     <a-scene>
