--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <script
         src="https://unpkg.com/aframe-text-geometry-component@0.5.1/dist/aframe-text-geometry-component.min.js"></script>
     <script src="https://unpkg.com/aframe-babia-components@1.2.7/dist/aframe-babia-components.min.js"></script>
-    <link rel="stylesheet" href="../museum/assets/gitlab-corner.css">
-
+    <link rel="stylesheet" href="../museum/assets/gitlab-corner.css"> 
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.2.0/dist/aframe-extras.min.js"></script>
+    
   </head>
   <body>
     <a-scene>
+      <a-assets>
+        <a-asset-item id="robot" src="gundam.glb"></a-asset-item>
+      </a-assets>
+      
       <a-entity environment="playArea: 2; preset: forest"></a-entity>
       <a-box grabbable position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
@@ -31,10 +36,16 @@
         color="#7BC8A4"
       ></a-plane>
 
-
       <a-entity id="leftHand" hand-tracking-grab-controls="hand: left;"></a-entity>
       <a-entity id="rightHand" hand-tracking-grab-controls="hand: right;"></a-entity>
     </a-entity>
+
+            <a-entity gltf-model="#robot" position="1.5 0.7 -4" rotation="0 45 0"
+            scale="2 2 2"></a-entity>
+
+      <a-entity movement-controls="fly: true">
+        <a-entity camera look-controls wasd-controls position="0 1.6 0"></a-entity>
+      </a-entity>
     </a-scene>
   </body>
 </html>
