--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
       <a-entity id="rightHand" hand-tracking-grab-controls="hand: right;"></a-entity>
     </a-entity>
 
-            <a-entity gltf-model="#robot" position="1.5 0.7 -4" rotation="0 45 0"
-            scale="1 1 1"></a-entity>
+            <a-entity gltf-model="#robot" 
+              position="1.5 0.7 -4" 
+              rotation="0 45 0"
+              scale="1 1 1"
+              animation="property: position; to: 3 0.7 -5; dir: alternate; loop: true"         
+              ></a-entity>
 
       <a-entity movement-controls="fly: true">
         <a-entity camera look-controls wasd-controls position="0 1.6 0"></a-entity>
